<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".account_detail"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:id="@+id/invisible_box"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/jason_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-100sp"
        android:layout_above="@+id/invisible_box"
        android:layout_centerHorizontal="true"
        app:civ_border_width="2dp"
        app:civ_border_color="#666666"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jason_image"
        android:fontFamily="@font/muli_bold"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/muli"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli_light"
        android:gravity="center_horizontal"
        android:text="@string/quotes"
        android:textAlignment="center" />

</RelativeLayout>
