<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/detail_image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_image"
        android:layout_toEndOf="@+id/detail_image"
        tools:text="#001"
        android:id="@+id/detail_number"
        android:textSize="24sp"
        android:layout_alignTop="@+id/detail_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/detail_number"
        android:layout_toEndOf="@+id/detail_number"
        android:id="@+id/detail_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        tools:text="Bulbasaur"
        android:textSize="26sp"
        android:layout_alignTop="@+id/detail_image"
         />
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/detail_image"
        android:layout_toRightOf="@+id/detail_image"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/detail_image"
        android:id="@+id/detail_type1"
        tools:text="Type1"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/detail_image"
        android:layout_toRightOf="@+id/detail_type1"
        android:layout_toEndOf="@+id/detail_type1"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/detail_type2"
        tools:text="Type2"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_marginBottom="5dp"
            tools:text="Description...."
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/detail_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_description"
            android:padding="9dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:id="@+id/detail_weight"
                android:textSize="15sp"
                tools:text="Weigth:7.9kg"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:background="#FFFFFF"/>
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textSize="15sp"
                tools:text="Height: 1m"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/detail_height"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:background="@drawable/border_one_side_right"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:id="@+id/status_bar"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:id="@+id/parent">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/hp"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/hp_num"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/attack"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/attack"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/atk_num"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/defense"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/defense"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/def_num"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="2"
                android:text="@string/sp_atk"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_atk"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/sp_atk_num"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="2"
                android:text="@string/sp_def"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_def"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/sp_def_num"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/speed"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/speed"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/speed_num"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_bar"
        android:layout_marginTop="20dp"
        android:id="@+id/shiny">
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/normal"
                android:textSize="25sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:background="@drawable/border_all"/>
            <TextView
                android:layout_width="0dp"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/shiny"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:background="@drawable/border_all"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:id="@+id/normal_image"
                android:background="@drawable/border_all"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:id="@+id/shiny_image"
                android:background="@drawable/border_all"/>
        </TableRow>

    </TableLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shiny"
        android:text="@string/play_with_pokemon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/play_with_pokemon"/>

</RelativeLayout>
</ScrollView>